# Word2Vec

./: README.md  model.pkl  pyproject.toml
data/: alice_clean.txt  alice_raw.txt
src/: dataset.py  model.py  text_cleaner.py  trainer.py  utils.py  word2vec.py
